# advent-of-code-2024

./: pyproject.toml
1/: solution-part-1.py  solution-part-2.py
2/: solution-part-1.py  solution-part-2.py
3/: solution-part-1.py  solution-part-2.py
4/: solution-part-1.py  solution-part-2.py
5/: solution-part-1-2.py
