[tool.poetry]
name = "advent-code-2024"
version = "0.1.0"
description = ""
authors = ["ZisisKostakakisGithubPersonal <dev@zisiskostakakis.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
